--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.*
+.pnp.js
+package-lock.json
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -12,6 +14,7 @@
 
 # testing
 /coverage
+test-report.xml
 
 # next.js
 /.next/
@@ -32,6 +35,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +46,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# logging
+logs
